--- a/KheaiGameEngine.csproj
+++ b/KheaiGameEngine.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
 	<OutputType>Library</OutputType>
+	  <Optimize>True</Optimize>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
 	<OutputType>Exe</OutputType>
+	  <Optimize>False</Optimize>
   </PropertyGroup>
 	
   <PropertyGroup>
@@ -13,7 +15,6 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<DebugType>embedded</DebugType>
-	<Optimize>False</Optimize>
 	<SignAssembly>False</SignAssembly>
   </PropertyGroup>
 
